Adapt VanillaApp to WorkTracker's needs

--- a/app/views/layouts/_header.haml
+++ b/app/views/layouts/_header.haml
@@ -1,7 +1,7 @@
 .navbar.navbar-default
   #main-navbar.container-fluid
     .navbar-header
-      = link_to "VanillaApp", root_path, class: 'navbar-brand'
+      = link_to "WorkTracker", root_path, class: 'navbar-brand'
       / The "show links" button. Floats to the RIGHT of its container.
       %button.navbar-toggle{type: 'button', data: {toggle: 'collapse', target: '.navbar-collapse'}}
         %span.sr-only Toggle navigation
