--- a/app/views/layouts/application.haml
+++ b/app/views/layouts/application.haml
@@ -1,7 +1,7 @@
 !!!
 %html
   %head
-    %title VanillaApp
+    %title WorkTracker
     / Tell mobile devices to pretend they're small screens so responsive
     / styling takes effect.
     %meta{name: 'viewport', content: 'width=device-width, initial-scale=1.0, user-scalable=no'}
