--- a/app/views/layouts/_header.haml
+++ b/app/views/layouts/_header.haml
@@ -14,13 +14,9 @@
         %li= link_to "About", about_path
 
         - if user_signed_in?
-          %li.dropdown
-            %a.dropdown-toggle{'data-toggle' => 'dropdown'}
-              Manage
-              %span.caret
-            %ul.dropdown-menu
-              %li= link_to "Clients",  clients_path
-              %li= link_to "Projects", projects_path
+          %li= link_to "Clients",  clients_path
+          %li= link_to "Projects", projects_path
+          %li= link_to "Timesheet", work_entries_path
 
           %li.dropdown
             %a.dropdown-toggle{'data-toggle' => 'dropdown'}
