--- a/app/views/projects/index.haml
+++ b/app/views/projects/index.haml
@@ -12,8 +12,11 @@
   %tr
     %th Client
     %th Name
+    %th Billable?
     %th
   - @projects.each do |project|
     %tr
       %td= link_to project.client.name, project.client
       %td= link_to project.name, project
+      %td= project.is_billable? ? "Yes" : "No"
+      %td= link_to glyph('pencil'), edit_project_path(project)
