Filter entries on Timesheet list

--- a/app/assets/stylesheets/global.scss
+++ b/app/assets/stylesheets/global.scss
@@ -16,6 +16,8 @@ table.form {
 
 // Utility
 
+.js-hidden { display: none; }
+
 .nowrap { white-space: nowrap; }
 
 .force_red { color: #a94442 !important; }
