Fixes: - User sees timesheet after logging in - Starting a new entry doesn't stop running ones - Change the way currently running entries are displayed

--- a/app/views/work_entries/index.haml
+++ b/app/views/work_entries/index.haml
@@ -54,7 +54,8 @@
         - if entry.duration
           <strong>#{entry.duration}</strong> hrs
         - else
-          Since #{time entry.created_at}
+          %span.label.label-success= time entry.created_at
+          \-
           = link_to "stop", stop_work_entry_path(entry), class: "btn btn-xs btn-danger stop-work-entry"
 
       %td
