Assorted tweaks to timesheet:
- Fix highlighting logic on hours counters
- When filter is active, show results sum in hours counter (not day / wk)
- In totals and in timesheet list, round numbers to 1 digit
- Day / week start thresholds should be based on EST, not UTC
- When starting a new time entry, date is determined by controller not HTML
- Tooltips allow wrapped text
- Pretty page favicon; color changes when a timer is running

--- a/app/assets/stylesheets/global.scss
+++ b/app/assets/stylesheets/global.scss
@@ -39,6 +39,9 @@ table.striped {
   background-image: image-url("loading.gif");
 }
 
+.tooltip { white-space: normal; }
+
+
 // for Devise forms
 #error_explanation {
   color: #B20000;
