--- a/app/views/projects/show.haml
+++ b/app/views/projects/show.haml
@@ -3,8 +3,6 @@
 
 %h1 Project "#{@project.name}"
 
-%p= link_to "Edit", edit_project_path(@project)
-
 %table.form
   %tr
     %td Client
@@ -12,3 +10,6 @@
   %tr
     %td Billable?
     %td= @project.is_billable? ? "Yes" : "No"
+  %tr
+    %td
+    %td= link_to "Edit", edit_project_path(@project)
