--- a/app/views/layouts/_header.haml
+++ b/app/views/layouts/_header.haml
@@ -17,6 +17,7 @@
           %li= link_to "Clients",  clients_path
           %li= link_to "Projects", projects_path
           %li= link_to "Timesheet", work_entries_path
+          %li= link_to "Invoices", invoices_path
 
           %li.dropdown
             %a.dropdown-toggle{'data-toggle' => 'dropdown'}
