--- a/app/views/work_entries/index.haml
+++ b/app/views/work_entries/index.haml
@@ -30,7 +30,7 @@
     %th
 
   - @entries.each do |entry|
-    %tr.entry-row
+    %tr.highlight-on-hover
       %td
         %strong= entry.date.strftime('%a')
         = date entry.date
@@ -51,7 +51,7 @@
             %span.text-success billed
           - else
             %span.text-danger Yes
-            = link_to "Mark billed", mark_billed_work_entry_path(entry), class: "btn btn-xs btn-default mark-billed-work-entry"
+            = link_to glyph("pencil") + " billed", mark_billed_work_entry_path(entry), class: "btn btn-xs btn-default mark-billed-work-entry"
         - else
           %span.text-muted no
 
