Invoice preview formatting / wrap fixes; truncate admin notes

--- a/app/views/home/about.haml
+++ b/app/views/home/about.haml
@@ -4,7 +4,7 @@
 
 %h3 OMG another time tracking tool. Why?
 
-%p I built Work Tracker to scratch my own itch. Sure, there's a hundred other invoicing systems out there, but the ones I had tried didn't feel right, didn't seem to meet my needs. Maybe they were targeting a different user, maybe they just don't think the way I do, maybe I didn't take the time to learn them properly, but nothing stuck. After using a set of Google spreadsheets for a few months, I decided to try making my own.
+%p I built Work Tracker to scratch my own itch. Sure, there's a hundred other invoicing systems out there, but the ones I had tried didn't feel right, didn't seem to meet my needs. Maybe they were targeting a different user, maybe they just don't think the way I do, maybe I didn't take the time to learn them properly, but nothing stuck. After using a set of Google spreadsheets for a few months, I decided to make my own.
 
 %p You may find Work Tracker useful if you:
 
@@ -21,7 +21,7 @@
 
 %h4 1. Add your clients and projects
 
-%p After you sign up, you'll see links in the top menu to add Clients and Projects.Add your clients first, then for each client create one or more projects. Now you have categories to put your time entries into.
+%p After you sign up, you'll see links in the top menu to add Clients and Projects. Add your clients first, then for each client create one or more projects. Now you have categories to put your time entries into.
 
 %p For each client, you can specify an hourly rate that will be used when generating invoices. The presence or absence of this hourly rate also determines whether new entries created for that project are assumed to be billable or not.
 
