Hide New Timer box if filter is active

--- a/app/views/work_entries/index.haml
+++ b/app/views/work_entries/index.haml
@@ -10,14 +10,15 @@
 
 %hr
 
-= form_for current_user.work_entries.new(project: current_user.last_project) do |f|
-  %p
-    %strong New timer: &nbsp;
-    = f.select :project_id, @projects.collect{ |p| ["#{p.client.name} - #{p.name}", p.id] }, {}, class: "form-control", style: "display: inline-block; width: 250px;"
-    &nbsp;
-    = f.submit "Start", class: "btn btn-success btn-sm"
-    &nbsp;
-    = f.submit "Create and edit", class: "btn btn-info btn-sm"
+- if params[:filter].nil?
+  = form_for current_user.work_entries.new(project: current_user.last_project) do |f|
+    %p
+      %strong New timer: &nbsp;
+      = f.select :project_id, @projects.collect{ |p| ["#{p.client.name} - #{p.name}", p.id] }, {}, class: "form-control", style: "display: inline-block; width: 250px;"
+      &nbsp;
+      = f.submit "Start", class: "btn btn-success btn-sm"
+      &nbsp;
+      = f.submit "Create and edit", class: "btn btn-info btn-sm"
 
 %table.form.nowrap.striped
   %tr
