Single space between Invoice and Admin Notes

--- a/app/views/work_entries/index.haml
+++ b/app/views/work_entries/index.haml
@@ -60,6 +60,7 @@
         - if entry.invoice_notes.present?
           %span.label.label-info.def.has-tooltip{tooltip: entry.invoice_notes}
             = entry.invoice_notes[0..7]
+          &nbsp;
         - if entry.admin_notes.present?
           %span.label.label-warning.def.has-tooltip{tooltip: entry.admin_notes}
             = entry.admin_notes[0..7]
